--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -131,6 +131,7 @@ filterwarnings = [
     "ignore::DeprecationWarning",
     "ignore::UserWarning",
 ]
+testpaths = ["tests"]	
 
 [tool.isort]
 force_grid_wrap = 4
