--- a/template/docs/reference/{{ project_slug_snake_case }}.md.jinja
+++ b/template/docs/reference/{{ project_slug_snake_case }}.md.jinja
@@ -1,6 +1,6 @@
 # Reference
 
-::: {{ project_slug_snake_case }}
+::: {{ project_slug_snake_case }}.main
     options:
       show_root_heading: false
       show_source: false
