--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -2,8 +2,7 @@
 requires = [
     "hatchling",
     "hatch-vcs",
-    "panel>=1.5.0"
-    "requests",
+    "panel>=1.5.0",
     "packaging",
 ]
 build-backend = "hatchling.build"
@@ -59,8 +58,8 @@ Source = "{{ github_url }}"
 [project.optional-dependencies]
 dev = [
     'watchfiles',
-]
-tests = [
+    'mkdocs-material',
+    'mkdocstrings[python]',
     'pytest',
     'pytest-asyncio',
     'pytest-rerunfailures',
@@ -144,3 +143,7 @@ include_trailing_comma = true
 python_version = '{{ minimal_python_version[2:].replace('3', '3.') }}'
 no_implicit_optional = true
 check_untyped_defs = true
+
+[tool.hatch.version]
+source = "vcs"
+raw-options = { version_scheme = "no-guess-dev" }
