--- a/template/pixi.toml.jinja
+++ b/template/pixi.toml.jinja
@@ -8,6 +8,11 @@ postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-
 
 [dependencies]
 python = ">={{ minimal_python_version[2:].replace('3', '3.') }}"
+hatch = "*"
+hatch-vcs = "*"
+hatchling = "*"
+twine = "*"
+panel = ">=1.5.0"
 
 [host-dependencies]
 pip = "*"
