--- a/template/pixi.toml.jinja
+++ b/template/pixi.toml.jinja
@@ -11,6 +11,9 @@ python = ">={{ minimal_python_version[2:].replace('3', '3.') }}"
 
 [host-dependencies]
 pip = "*"
+hatchling = "*"
+hatch-vcs = "*"
+panel = ">=1.5.0"
 setuptools = ">=61"
 setuptools-scm = "*"
 
